...

    @State var averageFocused: Bool = false
    @State var toggles: [PomoStatus: Bool] = [.work: true, .rest: true, .longBreak: true]

    @State var selection: Date?
    @State var scrollPosition = Calendar.current.startOfDay(for: Date.now)
    @State var visibleDate = Date.now

    @State var showData = false

    var lastTime: CumulativeTime? {
        let request = CumulativeTimeData.pastCumulativeTimeRequest
        request.fetchLimit = 1
...

    var body: some View {
        ScrollView {
            VStack(spacing: 20) {
                Picker("Chart Scale", selection: $chartScale) {
                    Text("Daily").tag(ChartScale.day)
                    Text("Weekly").tag(ChartScale.week)
                }
                .accessibilityIdentifier("chartScalePicker")
                .pickerStyle(.segmented)
                ZStack(alignment: .bottomLeading) {
                    chartTitle
                        .opacity(selection == nil ? 1.0 : 0.0)
                    selectedInfo
                        .opacity(selection == nil ? 0.0 : 1.0)
...
                default:
                    EmptyView()
                }
                Divider()
                chartToggles
                Divider()
                allDataButton
                    .navigationDestination(isPresented: $showData) {
                        CumulativeTimesDataList()
                    }
            }
            .padding()
            .fontDesign(.rounded)
...
    }

    @ViewBuilder var chartTitle: some View {
        VStack(alignment: .leading) {
            HStack(alignment: .firstTextBaseline) {
                Text(String(format: "%.1f", totalForRange))
                    .accessibilityIdentifier("totalHourValue")
                    .font(.title)
                Text("total hours")
                    .foregroundStyle(.secondary)
            }
            switch chartScale {
            case .day:
...
