...
                .font(.footnote)
                .foregroundStyle(.secondary)
                .offset(x: -5)
            Grid(alignment: .leading, verticalSpacing: -1) {
                GridRow {
                    Text(String(format: "%.1f", estimates))
                        .accessibilityIdentifier("estimatesAverageValue")
                        .font(.body)
                        .monospacedDigit()
                        .foregroundStyle(.barRest)
                        .brightness(colorScheme == .dark ? 0.1 : 0.0)
                    Text("estimate")
                        .font(.footnote)
                }
                GridRow {
                    Text(String(format: "%.1f", actuals))
                        .accessibilityIdentifier("actualsAverageValue")
                        .font(.body)
                        .monospacedDigit()
                        .foregroundStyle(.end)
                        .brightness(colorScheme == .dark ? 0.1 : -0.2)
                        .saturation(colorScheme == .dark ? 1.0 : 1.3)
                    Text("actual pomos")
...
