...
                    AppFeaturesView()
                        .tag(1)
                    TipsView(color: bgColor)
                        .tag(2)
                }
                .environment(\.isSmallDevice, Device.isSmall(geometry: geometry))
                .accessibilityIdentifier("onBoardingTabView")
                .tabViewStyle(.page)
                .background {
                    OnBoardViewBackground(color: bgColor)
                        .ignoresSafeArea()
                }
                .animation(.easeInOut, value: bgColor)
...
                            .fontDesign(.rounded)
                            .fontWeight(.bold)
                            .foregroundStyle(colorScheme == .dark ? .black : bgColor)
                            .brightness(colorScheme == .dark ? 0.0 : 0.7)
                            .saturation(colorScheme == .dark ? 1.0 : 0.8)
                    }
                    .accessibilityIdentifier("skipWelcomeButton")
                }
                .onAppear {
                    changePageIndicators()
                }
                .onChange(of: colorScheme) {
                    changePageIndicators()
...
