...
                    Text("Get Started")
                        .font(.system(size: 20))
                        .foregroundStyle(.black)
                        .fontWeight(.medium)
                        .fontDesign(.monospaced)
                }
                .accessibilityIdentifier("getStartedButton")
                .buttonStyle(PopStyle(color: color))
                .frame(width: 170, height: 50)
            }
            Spacer()
        }
        .padding(.horizontal)
...
