...
            .brightness(pomoTimer.isPaused ? 0.0 : (colorScheme == .dark ? -0.2 : 0.3))
    }

    @ViewBuilder
    private func timerView(at date: Date) -> some View {
        Text(pomoTimer.timeRemaining(atDate: date).timerFormatted())
            .accessibilityIdentifier("timerDisplay")
            .font(.system(size: 70,
                          weight: pomoTimer.isPaused ? .light : .regular,
                          design: .rounded))
            .monospacedDigit()
            .colorScheme(colorScheme == .dark ? .light : .dark)
    }
...
